--- a/sample/SampleApp/Shared/MainLayout.razor
+++ b/sample/SampleApp/Shared/MainLayout.razor
@@ -3,9 +3,7 @@
 
 
 <div class="main">
-    <div class="top-row px-4">
-        <a href="https://github.com/BlazingMahi" target="_blank" class="ml-md-auto">BlazingMahi</a>
-    </div>
+    <Menu></Menu>
 
     <div class="content px-4">
         @Body
